--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@
 }
 
 body, html {
-  background-color: $main-background-color;
+  background: $main-background-color;
   color: $main-font-color;
   font-family: $main-font-style;
   font-size: 40px;
