--- a/src/styles/ExpenseItem.scss
+++ b/src/styles/ExpenseItem.scss
@@ -5,7 +5,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 30px auto;
+    margin: 30px 0;
     background-color: $expense-background-color;
     box-shadow: 2px 2px 2px $expense-box-shadow-color;
     border-radius: 10px;  
@@ -26,6 +26,13 @@
 
     &__date {
         margin-left: 10px;
+        display: flex;
+        flex-direction: row;
+
+        &-day,
+        &-month {
+            padding-right: 10px;
+        }
     }
 
     &__price {
@@ -39,8 +46,20 @@
     }
 
     &__title {
-        font-size: 30px;
-        min-width: 25%;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-items: flex-end;
+        flex-flow: column-reverse;
+        justify-content: flex-start;
+        flex: 1;
+
+        &-heading {
+            font-size: 1rem;
+            flex: 1;
+            margin: 0 1rem;
+            color: white;
+        }
     }
 
 }
