--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -13,3 +13,12 @@ $main-font-style: ('Cabin Sketch', cursive);
     justify-content: center;
     align-items: center;
 }
+
+.main-heading {
+    font-size: 1.5rem;
+    margin: 20px;
+
+    &__decoration {
+        font-size: 1rem;
+    }
+}
