--- a/src/styles/ExpenseDate.scss
+++ b/src/styles/ExpenseDate.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     border-radius: 10px;
     border: 1px solid #ececec;
+    min-width: 300px;
     align-items: center;
     justify-content: center;
 
