--- a/src/styles/ExpenseItem.scss
+++ b/src/styles/ExpenseItem.scss
@@ -14,7 +14,7 @@
     &__date,
     &__title,
     &__price {
-        margin: 10px 3rem;
+        margin: 10px 1.5rem;
         flex: 1;
     }
 
@@ -46,13 +46,9 @@
     }
 
     &__title {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        align-items: flex-end;
-        flex-flow: column-reverse;
-        justify-content: flex-start;
-        flex: 1;
+        flex-grow: 2;
+        align-items: center;
+        width: 500px;
 
         &-heading {
             font-size: 1rem;
